--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,16 @@ margin-left: 50px;
         border-radius: 15px 15px 0 0;
         width: 100%;
 }
+.fa-heart::before {
+    content: "\f004";
+    font-weight: lighter;
+    transition: color 1s ease-out;
+}
+.fa-heart:hover::before{
+    font-weight: 900;
+    color: #9356DC;
+    cursor: pointer;
+}
 .Proj-restaurants__texte{
     margin-top: -10px;
     margin-left: 10px;
