--- a/css/styles_goût.css
+++ b/css/styles_goût.css
@@ -61,9 +61,29 @@ body {
  background-position: center;
  width: 100%;
  }
+ 
+.fa-heart::before {
+    content: "\f004";
+    font-weight: lighter;
+    transition: color 1s ease-out;
+}
+.fa-heart:hover::before{
+    font-weight: 900;
+    color: #9356DC;
+    cursor: pointer;
+}
  #images{
     background-image: url("../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg")
+    }
+ #images__francaise{
+     background-image: url("../images/restaurants/Ménilmontant.jpg")
  }
+#images__enchantée{
+    background-image: url("../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+}
+#images__délice{
+    background-image: url("../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+}
  .titre{
      background-color: whitesmoke;
      margin-top: -50px;
@@ -87,6 +107,7 @@ body {
  }
  .Menu{
      background-color: whitesmoke;
+    
 }
 h5{
     margin-left: 13px;
@@ -115,7 +136,7 @@ h5{
     background-color: #99E2D0;
     transition-property: transform;
     transition-duration: 1000ms;
-    transform:scale(1;05)
+    
 
     }
 .Menu li {
