--- a/sass.scss/components/_buttons.scss
+++ b/sass.scss/components/_buttons.scss
@@ -1,3 +1,64 @@
+
+/**
+  .projet-commander_btn {
+	margin-top: 15%;
+	margin-bottom: 15%;
+  }
+  
+  .Proj-commander__btn {
+	display: block;
+	margin: auto;
+	border-radius: 2rem 2rem 2rem 2rem;
+	padding: 16px 50px;
+	cursor: pointer;
+	border: none;
+	color: white;
+	font-size: 17px;
+	background: linear-gradient(0deg, #9356DC, #FF79DA);
+	box-shadow: 5px 5px 5px lightgray;
+  }
+.Proj-fonctionnement__btn {
+	display: flex;
+	border-radius: 1rem 1rem 1rem 1rem;
+	padding: 1% 10%;
+	cursor: pointer;
+	border: none;
+	background-color: whitesmoke;
+	box-shadow: 1px 5px 5px lightgrey;
+	margin: auto;
+	margin-top: 7%;
+	
+	&:hover {
+		background-color: lavender;
+		box-shadow: 0px 0px 35px #dadada;
+	}
+
+	.fa-solid{
+		margin: auto;
+		margin-left: -37%;
+		font-size: 18px;
+		color: grey
+	  }
+}
+.Proj-commander_btn{
+	display: block;
+	margin: auto;
+}
+.Proj-description__btn{
+border-radius: 2.2rem 2.2rem 2.2rem 2.2rem;
+    padding: 26px 22px;
+    cursor: pointer;
+    border: none;
+    color: white;
+    font-size: 24px;
+    background: linear-gradient(
+0deg
+, #9356DC, #FF79DA);
+    box-shadow: 5px 5px 5px lightgrey;
+    margin-bottom: 25%;
+}
+*/
+@media (max-width: 700px) {
 .projet-commander_btn {
 	margin-top: 15%;
 	margin-bottom: 15%;
@@ -24,7 +85,7 @@
 	margin-top: 15px;
 	background-color: whitesmoke;
 	box-shadow: 1px 5px 5px lightgrey;
-	margin-left: 0%;
+	
 	
 	&:hover {
 		background-color: lavender;
@@ -43,12 +104,14 @@
 	margin-bottom: 15%;
 }
 .Proj-description__btn{
-border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
+border-radius: 2rem 2rem 2rem 2rem;
 padding: 16px 22px;
 cursor: pointer;
 border: none;
 color: white;
-font-size: 16px;
+font-size: 20px;
 background: linear-gradient(0deg, #9356DC , #FF79DA);
 box-shadow: 5px 5px 5px lightgray;
+margin-bottom: 25%;
+}
 }
