--- a/sass.scss/layout/_footer.scss
+++ b/sass.scss/layout/_footer.scss
@@ -1,9 +1,48 @@
+/*
+.fondnoir {
+  background-color: #303030;
+  color: white;
+  padding-bottom: 1%;
+  padding-top: 1%;
+  a {
+    color: #dadada;
+    font-size: 28px;
+  }
+
+  ul {
+  list-style-type: none;
+  padding-left: 25px;
+}
+
+li {
+  margin-bottom: 5px;
+  display: inline-block;
+  margin-right: 2%;
+}
+ h1 {
+    margin-left: 25px;
+    font-size: 28px;
+    font-family: Shrikhand;
+    margin-top: 1%;
+  }
+
+  i {
+    font-size: 23px;
+    margin-right: 5px;
+  }
+  
+}
+*/
+
+@media (max-width: 700px) {
+
 .fondnoir {
     background-color: #303030;
     color: white;
   
     a {
       color: #dadada;
+      font-size: 16px;
     }
   }
   
@@ -25,7 +64,8 @@
     }
   
     i {
-      font-size: 13px;
+      font-size: 14px;
       margin-right: 5px;
     }
   }
+}
