--- a/sass.scss/layout/_header.scss
+++ b/sass.scss/layout/_header.scss
@@ -1,31 +1,61 @@
-a {
-    text-decoration: none;
-    color: initial;
-  }
-  
-  #logo img {
-    display: block;
-    margin: auto;
-    width: 35%;
-    margin-top: 15px;
-  }
-  
-  .fleche_retour {
-    margin-left: 20px;
-    margin-top: -20px;
-  }
 
+/*
+.fleche_retour {
+  margin-left: 20px;
+  margin-top: -20px;
+}
+
+a {
+  text-decoration: none;
+  color: initial;
+}
+
+#logo img {
+  display: block;
+  margin: auto;
+  margin-top: 15px;
+  width: 20%;
+}
+
+.proj-header {
+  padding-top: 1%;
+  padding-bottom: 2%;
+  box-shadow: 0px 18px 19px 0px rgb(0,0, 0, 0.2 );
+}
+*/
+@media (max-width: 700px) {
   a {
-    text-decoration: none;
-    color: initial;
-  }
+      text-decoration: none;
+      color: initial;
+    }
+    
+    #logo img {
+      display: block;
+      margin: auto;
+      width: 35%;
+      margin-top: 15px;
+    }
+    
+    .fleche_retour {
+      margin-left: 20px;
+      margin-top: -20px;
+    }
   
-  #logo img {
-    display: block;
-    margin: auto;
-    width: 45%;
-  }
+    a {
+      text-decoration: none;
+      color: initial;
+    }
+    
+    #logo img {
+      display: block;
+      margin: auto;
+      width: 45%;
+    }
+    
+    .proj-header {
+      padding-top: 5%;
+      padding-bottom: 2%;
+      box-shadow: 0px 7px 8px 0px rgb(0 0 0 / 20%);
   
-  .proj-header {
-    margin-top: 35px;
-  }
+    }
+}
