--- a/sass.scss/layout/_sectionresto.scss
+++ b/sass.scss/layout/_sectionresto.scss
@@ -1,3 +1,5 @@
+
+@media (max-width: 700px) {
 .Proj-restaurants__Nouveau {
     border-radius: 20px;
     background-color: white;
@@ -12,6 +14,7 @@
   #Proj-restaurants {
     background-color: whitesmoke;
     margin-top: 20%;
+    padding-top: 10%;
   }
   .Proj-restaurants__image {
     height: 210px;
@@ -23,5 +26,67 @@
   .gout_img {
     margin-top: 15px;
   }
-  
-  
+  .nouveau{
+    position: absolute;
+    margin-left: 61%;
+    width: 30%;
+  }
+ .nouveau p{
+   background-color: #99E2D0;
+    font-size: 18px;
+    width: 100%;
+    height: 25px;
+    padding-top: 5px;
+    color: forestgreen;
+ }
+}
+/*
+.Proj-restaurants__Nouveau {
+  border-radius: 20px;
+  background-color: white;
+  box-shadow: 0px 0px 35px #dadada;
+  display: block;
+  margin: auto;
+  padding-bottom: 90px;
+  cursor: pointer;
+  width: 90%;
+  margin-top: 6%;
+  margin-left: 2%;
+}
+#Proj-restaurants {
+  display: flex;
+  align-content: space-between;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: baseline;
+  background-color: whitesmoke;
+  margin-top: 5%;
+
+}
+.Proj-restaurants__image {
+  height: 210px;
+  background-size: cover;
+  background-position: bottom;
+  border-radius: 15px 15px 0 0;
+  width: 100%;
+}
+.gout_img {
+  margin-top: 0px;
+}
+.nouveau{
+  position: absolute;
+  margin-left: 15%;
+  width: 6%;
+  margin-top: -10px;
+}
+.nouveau p{
+ background-color: #99E2D0;
+  font-size: 17px;
+  width: 100%;
+  height: 25px;
+  padding-top: 5px;
+  padding-left: 20%;
+  color: forestgreen;
+}
+*/
