--- a/sass.scss/layout/_sidebardescription.scss
+++ b/sass.scss/layout/_sidebardescription.scss
@@ -1,13 +1,15 @@
+
+@media (max-width: 700px) {
 .proj-description {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: whitesmoke;
+	background-color: #fafafa;
 	h1 {
 		text-align: center;
-		max-width: 85%;
+		max-width: 64%;
 		margin-top: 30px;
-		max-width: 100%;
+		font-size: 20px;
 	}
 	p {
 		margin-top: -10px;
@@ -15,7 +17,7 @@
 	}
 }
 .position {
-	background-color: gainsboro;
+	background-color: #f3f3f3;
 	text-align: center;
 	margin-top: 10px;
 	font-size: 65%;
@@ -25,3 +27,46 @@ p {
 	max-width: 85%;
 	margin-top: 30px;
 }
+h2{
+	color:#7a7a7a;
+}
+}
+/*
+.proj-description {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #fafafa;
+	margin-bottom: 1%;
+	h1 {
+		text-align: center;
+		max-width: 64%;
+		margin-top: 30px;
+		font-size: 28px;
+	}
+	p {
+		margin-top: -10px;
+		font-size: 22px;
+		text-align: center;
+		max-width: 30%;
+	}
+}
+.position {
+    background-color: #f3f3f3;
+	text-align: center;
+	width: 100%;
+	padding-bottom: 1%;
+
+p {
+	text-align: center;
+	max-width: 85%;
+	margin-top: 30px;
+}
+h2{
+	font-size: 27px;
+	color: #7a7a7a;
+	background-color: #f3f3f3;
+	padding-top: 1%;
+}
+}
+*/
