--- a/sass.scss/layout/_hometexte.scss
+++ b/sass.scss/layout/_hometexte.scss
@@ -1,4 +1,4 @@
-/*
+
 
 .Proj-restaurants__texte {
   margin-top: -10px;
@@ -38,9 +38,10 @@
 
 #Proj-restaurants h1 {
   margin-left: 5%;
-  padding-top: 1%;
-  padding-bottom: 2%;
+  padding-top: 0%;
+  padding-bottom: 4%;
   position: absolute;
+  font-size: 27px;
 }
 .proj-Fonctionnement {
   display: flex;
@@ -58,11 +59,37 @@
     margin-top: inherit;
   }
 }
+.Proj-fonctionnement__btn {
+  .fa-1, .fa-2, .fa-3{
+  font-size: 14px;
+  margin: auto;
+  margin-left: -62px;
+  margin-top: 15px;
+  position: absolute;
+  color: white;
+  }
+  .fa-2{
+    margin-left: -61px;
+  }
+  .fa-3{
+    margin-left: -62px;
+    margin-top: 16px;
+    
+  }
+  .fa-circle{
+    font-size: 22px;
+    margin: auto;
+    margin-left: -38%;
+    margin-top: 12px;
+    position: relative;
+    color: #9356DC;
+  }
+}
 
-*/
 
 
-@media (max-width: 700px) {
+
+@media all and (max-width: 700px) {
 .Proj-restaurants__texte {
     margin-top: -10px;
     margin-left: 10px;
@@ -100,15 +127,20 @@
   
   #Proj-restaurants h1 {
     margin-left: 5%;
+    padding-top: 5%;
+    padding-bottom: 2%;
+    position: initial;
   }
   .proj-Fonctionnement {
     display: flex;
     flex-direction: column;
     align-items: center;
     h1 {
+      font-size: 18px;
       margin-top: 14%;
       margin-right: auto;
       margin-left: 20px;
+      position: initial;
     }
     p {
       text-align: center;
@@ -116,4 +148,33 @@
       margin-top: inherit;
     }
   }
+
+  .Proj-fonctionnement__btn {
+    .fa-1, .fa-2, .fa-3{
+    font-size: 14px;
+    margin: auto;
+    margin-left: -90px;
+    margin-top: 15px;
+    position: absolute;
+    color: white;
+    }
+    .fa-2{
+      margin-left: -91px;
+    }
+    .fa-3{
+      margin-left: -91px;
+      margin-top: 16px;
+      
+    }
+    .fa-circle{
+      font-size: 22px;
+      margin: auto;
+      margin-left: -26%;
+      margin-top: 12px;
+      position: absolute;
+      color: #9356DC;
+    }
+  }
+  
+
 }
