--- a/sass.scss/layout/_pagestitre.scss
+++ b/sass.scss/layout/_pagestitre.scss
@@ -1,145 +1,5 @@
 
-@media (max-width: 700px) {
-    
-  
-Menu {
-    h3 {
-      margin-top: 2px;
-      font-weight: 500;
-    }
-  
-    h4 {
-      margin-top: -15px;
-      font-weight: lighter;
-      font-size: 15px;
-      padding-bottom: 5px;
-    }
-  
-    p {
-      margin-top: -39px;
-      margin-left: 85%;
-      padding-bottom: 10px;
-      font-size: 15px;
-      font-weight: 900;
-    }
-  }
-  h5 {
-    margin-left: 13px;
-    margin-right: 87%;
-    border-bottom: 3px solid #99E2D0;
-    font-weight: lighter;
-    padding-bottom: 5px;
-    margin-top: 40px;
-  }
-  
-.titre {
-    background-color: whitesmoke;
-    margin-top: -50px;
-    padding-top: 15px;
-    padding-left: 15px;
-    border-radius: 50px 50px 0px 0px;
-    font-size: 19px;
-  
-    i {
-      margin-left: 84%;
-      font-weight: lighter;
-      font-size: 25px;
-      margin-top: -20px;
-    }
-  
-    h2 {
-      margin-bottom: -28px;
-      font-family: Shrikhand;
-    }
-  }
-  fondnoir {
-    h1 {
-      margin-left: 25px;
-      font-size: 20px;
-      font-family: Shrikhand;
-      margin-top: 20px;
-    }
-  
-    i {
-      font-size: 13px;
-      margin-right: 5px;
-    }
-  }
-  
-  .Menu_texte {
-    background-color: white;
-    border-radius: 15px 15px 15px 15px;
-    width: 90%;
-    margin: auto;
-    box-shadow: 0px 0px 35px gainsboro;
-    list-style: none;
-  }
-  
-  
-  
-  .Menu_texte {
-    padding-left: 15px;
-    padding-top: 10px;
-    padding-bottom: 1%;
-    margin-bottom: 20px;
-  }
-
-}
  
-Menu {
-  h3 {
-    margin-top: 2px;
-    font-weight: 500;
-    margin-left: -10%;
-  }
-
-  h4 {
-    margin-top: -14px;
-    font-weight: lighter;
-    font-size: 15px;
-    padding-bottom: 5px;
-    margin-bottom: 5px;
-    margin-left: -10px;
-  }
-
-  p {
-    margin-top: -26px;
-    margin-left: 87%;
-    font-size: 15px;
-    font-weight: 900;
-    transform: scale(1);
-  }
-}
-h5 {
-  margin-left: 13px;
-  margin-right: 87%;
-  border-bottom: 3px solid #99E2D0;
-  font-weight: lighter;
-  padding-bottom: 5px;
-  margin-top: 40px;
-}
-
-.titre {
-  background-color: whitesmoke;
-  margin-top: -50px;
-  padding-top: 15px;
-  padding-left: 17px;
-  border-radius: 50px 50px 0px 0px;
-  font-size: 22px;
-
-  i {
-    margin-left: 95%;
-    font-weight: lighter;
-    font-size: 30px;
-    margin-top: -20px;
-  }
-
-  h2 {
-    margin-bottom: -28px;
-    font-family: Shrikhand;
-    color: black;
-  }
-}
 fondnoir {
   h1 {
     margin-left: 25px;
@@ -157,7 +17,7 @@ fondnoir {
 .Menu_texte {
   background-color: white;
   border-radius: 15px 15px 15px 15px;
-  width: 90%;
+  width: 100%;
   margin: auto;
   box-shadow: 0px 0px 35px gainsboro;
   list-style: none;
@@ -170,4 +30,96 @@ fondnoir {
   padding-top: 10px;
   padding-bottom: 1%;
   margin-bottom: 20px;
+  margin-left: 0px;
+ 
 }
+
+
+
+
+
+@media all and (max-width: 700px) {
+    Menu {
+      h3 {
+        margin-top: 2px;
+        font-weight: 500;
+      }
+    
+      h4 {
+        margin-top: -15px;
+        font-weight: lighter;
+        font-size: 15px;
+        padding-bottom: 5px;
+      }
+    
+      p {
+        margin-top: -39px;
+        margin-left: 85%;
+        padding-bottom: 10px;
+        font-size: 15px;
+        font-weight: 900;
+      }
+    }
+    h5 {
+      margin-left: 13px;
+      margin-right: 87%;
+      border-bottom: 3px solid #99E2D0;
+      font-weight: lighter;
+      padding-bottom: 5px;
+      margin-top: 40px;
+    }
+    
+  .titre {
+      background-color: whitesmoke;
+      margin-top: -50px;
+      padding-top: 15px;
+      padding-left: 15px;
+      border-radius: 50px 50px 0px 0px;
+      font-size: 19px;
+    
+      i {
+        margin-left: 84%;
+        font-weight: lighter;
+        font-size: 25px;
+        margin-top: -20px;
+      }
+    
+      h2 {
+        margin-bottom: -28px;
+        font-family: Shrikhand;
+        color: black;
+      }
+    }
+    fondnoir {
+      h1 {
+        margin-left: 25px;
+        font-size: 20px;
+        font-family: Shrikhand;
+        margin-top: 20px;
+      }
+    
+      i {
+        font-size: 13px;
+        margin-right: 5px;
+      }
+    }
+    
+    .Menu_texte {
+      background-color: white;
+      border-radius: 15px 15px 15px 15px;
+      width: 90%;
+      margin: auto;
+      box-shadow: 0px 0px 35px gainsboro;
+      list-style: none;
+    }
+    
+    
+    
+    .Menu_texte {
+      padding-left: 15px;
+      padding-top: 10px;
+      padding-bottom: 1%;
+      margin-bottom: 20px;
+    }
+  
+  }
