--- a/sass.scss/layout/_sidebardescription.scss
+++ b/sass.scss/layout/_sidebardescription.scss
@@ -1,37 +1,5 @@
 
-@media (max-width: 700px) {
-.proj-description {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #fafafa;
-	h1 {
-		text-align: center;
-		max-width: 64%;
-		margin-top: 30px;
-		font-size: 20px;
-	}
-	p {
-		margin-top: -10px;
-		font-size: 18px;
-	}
-}
-.position {
-	background-color: #f3f3f3;
-	text-align: center;
-	margin-top: 10px;
-	font-size: 65%;
-}
-p {
-	text-align: center;
-	max-width: 85%;
-	margin-top: 30px;
-}
-h2{
-	color:#7a7a7a;
-}
-}
-/*
+
 .proj-description {
 	display: flex;
 	flex-direction: column;
@@ -69,4 +37,40 @@ h2{
 	padding-top: 1%;
 }
 }
-*/
+
+@media all and (max-width: 700px) {
+	.proj-description {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		background-color: #fafafa;
+		h1 {
+			text-align: center;
+			max-width: 64%;
+			margin-top: 30px;
+			font-size: 20px;
+		}
+		p {
+			margin-top: -10px;
+			font-size: 18px;
+		    max-width: 100%;
+		}
+	}
+	.position {
+		background-color: #f3f3f3;
+		text-align: center;
+		margin-top: 10px;
+		font-size: 65%;
+	
+	p {
+		text-align: center;
+		max-width: 85%;
+		margin-top: 30px;
+	}
+	h2{
+		color:#7a7a7a;
+		font-size: 18px;
+	}
+    }
+	}
+	
